[gd_scene load_steps=2 format=3 uid="uid://bsvas53k4b4ur"]

[ext_resource type="Script" path="res://genericProjectileSpawner.gd" id="1_q0exb"]

[node name="genericProjectileSpawner" type="Node2D"]
script = ExtResource("1_q0exb")

[node name="attackTimer" type="Timer" parent="."]

[node name="reloadTimer" type="Timer" parent="."]

[connection signal="timeout" from="attackTimer" to="." method="_on_attack_timer_timeout"]
